mycompile/syntax.output
状态 121 conflicts: 1 reduce/reduce
状态 129 conflicts: 1 shift/reduce
状态 138 conflicts: 1 reduce/reduce


语法

    0 $accept: Program $end

    1 Program: ClassDef Program
    2        | ClassDef

    3 VariableDef: Variable SEMI
    4            | Variable error SEMI

    5 Variable: Type ID ASSIGN Expr
    6         | ID ASSIGN Expr

    7 Type: TYPE
    8     | CLASS ID
    9     | Type LB RB

   10 Formals: %empty
   11        | Formals2

   12 Formals2: Variable COMMA Formals
   13         | Variable

   14 FunctionDef: STATIC Type ID LP Formals RP StmtBlock
   15            | Type ID LP Formals RP StmtBlock

   16 ClassDef: CLASS ID EXTENDS ID LC Field2 RC
   17         | CLASS ID EXTENDS ID LC Field2 error RC
   18         | CLASS ID LC Field2 RC
   19         | CLASS ID LC Field2 error RC

   20 Field: VariableDef
   21      | FunctionDef

   22 Field2: %empty
   23       | Field Field2

   24 StmtBlock: LC Stmt2 RC
   25          | LC Stmt2 error RC

   26 Stmt: VariableDef
   27     | SimpleStmt SEMI
   28     | SimpleStmt error SEMI
   29     | IfStmt
   30     | WhileStmt
   31     | ForStmt
   32     | BreakStmt SEMI
   33     | BreakStmt error SEMI
   34     | ReturnStmt SEMI
   35     | ReturnStmt error SEMI
   36     | PrintStmt SEMI
   37     | PrintStmt error SEMI
   38     | StmtBlock

   39 Stmt2: %empty
   40      | Stmt Stmt2

   41 SimpleStmt: %empty
   42           | LValue ASSIGN Expr
   43           | Call

   44 LValue: ID
   45       | Expr DOT ID
   46       | Expr LB Expr RB

   47 Call: ID LP Actuals RP
   48     | Expr DOT ID LP Actuals RP

   49 Actuals: %empty
   50        | Actuals2

   51 Actuals2: Expr COMMA Actuals2
   52         | Expr

   53 ForStmt: FOR LP SimpleStmt SEMI BoolExpr SEMI SimpleStmt RP Stmt

   54 WhileStmt: WHILE LP BoolExpr RP Stmt

   55 IfStmt: IF LP BoolExpr RP Stmt
   56       | IF LP BoolExpr RP Stmt ELSE Stmt

   57 ReturnStmt: RETURN
   58           | RETURN Expr

   59 BreakStmt: BREAK

   60 PrintStmt: PRINT LP Actuals2 RP

   61 BoolExpr: Expr

   62 Expr: Constant
   63     | LValue
   64     | THIS
   65     | Call
   66     | LP Expr RP
   67     | Expr PLUS Expr
   68     | Expr MINUS Expr
   69     | Expr STAR Expr
   70     | Expr DIV Expr
   71     | Expr MOD Expr
   72     | MINUS Expr
   73     | Expr RELOP Expr
   74     | Expr ENEOP Expr
   75     | Expr AND Expr
   76     | Expr OR Expr
   77     | NOT Expr
   78     | READINTEGER LP RP
   79     | READLINE LP RP
   80     | NEW ID LP RP
   81     | NEW Type LB Expr RB
   82     | INSTANCEOF LP Expr COMMA ID RP
   83     | LP CLASS ID RP Expr

   84 Constant: INTEGER
   85         | FLOAT
   86         | BOOL
   87         | STRING
   88         | Null


Terminals, with rules where they appear

$end (0) 0
error (256) 4 17 19 25 28 33 35 37
ID (258) 5 6 8 14 15 16 17 18 19 44 45 47 48 80 82 83
TYPE (259) 7
BOOL (260) 86
INTEGER (261) 84
FLOAT (262) 85
STRING (263) 87
BREAK (264) 59
CLASS (265) 8 16 17 18 19 83
ELSE (266) 56
EXTENDS (267) 16 17
FOR (268) 53
IF (269) 55 56
NEW (270) 80 81
Null (271) 88
RETURN (272) 57 58
THIS (273) 64
WHILE (274) 54
STATIC (275) 14
PRINT (276) 60
READINTEGER (277) 78
READLINE (278) 79
INSTANCEOF (279) 82
PLUS (280) 67
MINUS (281) 68 72
STAR (282) 69
DIV (283) 70
MOD (284) 71
RELOP (285) 73
ENEOP (286) 74
ASSIGN (287) 5 6 42
AND (288) 75
OR (289) 76
NOT (290) 77
SEMI (291) 3 4 27 28 32 33 34 35 36 37 53
COMMA (292) 12 51 82
DOT (293) 45 48
LP (294) 14 15 47 48 53 54 55 56 60 66 78 79 80 82 83
RP (295) 14 15 47 48 53 54 55 56 60 66 78 79 80 82 83
LB (296) 9 46 81
RB (297) 9 46 81
LC (298) 16 17 18 19 24 25
RC (299) 16 17 18 19 24 25


Nonterminals, with rules where they appear

$accept (45)
    左： 0
Program (46)
    左： 1 2, 右： 0 1
VariableDef (47)
    左： 3 4, 右： 20 26
Variable (48)
    左： 5 6, 右： 3 4 12 13
Type (49)
    左： 7 8 9, 右： 5 9 14 15 81
Formals (50)
    左： 10 11, 右： 12 14 15
Formals2 (51)
    左： 12 13, 右： 11
FunctionDef (52)
    左： 14 15, 右： 21
ClassDef (53)
    左： 16 17 18 19, 右： 1 2
Field (54)
    左： 20 21, 右： 23
Field2 (55)
    左： 22 23, 右： 16 17 18 19 23
StmtBlock (56)
    左： 24 25, 右： 14 15 38
Stmt (57)
    左： 26 27 28 29 30 31 32 33 34 35 36 37 38, 右： 40 53 54
    55 56
Stmt2 (58)
    左： 39 40, 右： 24 25 40
SimpleStmt (59)
    左： 41 42 43, 右： 27 28 53
LValue (60)
    左： 44 45 46, 右： 42 63
Call (61)
    左： 47 48, 右： 43 65
Actuals (62)
    左： 49 50, 右： 47 48
Actuals2 (63)
    左： 51 52, 右： 50 51 60
ForStmt (64)
    左： 53, 右： 31
WhileStmt (65)
    左： 54, 右： 30
IfStmt (66)
    左： 55 56, 右： 29
ReturnStmt (67)
    左： 57 58, 右： 34 35
BreakStmt (68)
    左： 59, 右： 32 33
PrintStmt (69)
    左： 60, 右： 36 37
BoolExpr (70)
    左： 61, 右： 53 54 55 56
Expr (71)
    左： 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
    81 82 83, 右： 5 6 42 45 46 48 51 52 58 61 66 67 68 69 70 71
    72 73 74 75 76 77 81 82 83
Constant (72)
    左： 84 85 86 87 88, 右： 62


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program   转到状态 2
    ClassDef  转到状态 3


State 1

   16 ClassDef: CLASS . ID EXTENDS ID LC Field2 RC
   17         | CLASS . ID EXTENDS ID LC Field2 error RC
   18         | CLASS . ID LC Field2 RC
   19         | CLASS . ID LC Field2 error RC

    ID  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: ClassDef . Program
    2        | ClassDef .

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (Program)

    Program   转到状态 6
    ClassDef  转到状态 3


State 4

   16 ClassDef: CLASS ID . EXTENDS ID LC Field2 RC
   17         | CLASS ID . EXTENDS ID LC Field2 error RC
   18         | CLASS ID . LC Field2 RC
   19         | CLASS ID . LC Field2 error RC

    EXTENDS  shift, and go to state 7
    LC       shift, and go to state 8


State 5

    0 $accept: Program $end .

    $default  接受


State 6

    1 Program: ClassDef Program .

    $default  reduce using rule 1 (Program)


State 7

   16 ClassDef: CLASS ID EXTENDS . ID LC Field2 RC
   17         | CLASS ID EXTENDS . ID LC Field2 error RC

    ID  shift, and go to state 9


State 8

   18 ClassDef: CLASS ID LC . Field2 RC
   19         | CLASS ID LC . Field2 error RC

    ID      shift, and go to state 10
    TYPE    shift, and go to state 11
    CLASS   shift, and go to state 12
    STATIC  shift, and go to state 13

    $default  reduce using rule 22 (Field2)

    VariableDef  转到状态 14
    Variable     转到状态 15
    Type         转到状态 16
    FunctionDef  转到状态 17
    Field        转到状态 18
    Field2       转到状态 19


State 9

   16 ClassDef: CLASS ID EXTENDS ID . LC Field2 RC
   17         | CLASS ID EXTENDS ID . LC Field2 error RC

    LC  shift, and go to state 20


State 10

    6 Variable: ID . ASSIGN Expr

    ASSIGN  shift, and go to state 21


State 11

    7 Type: TYPE .

    $default  reduce using rule 7 (Type)


State 12

    8 Type: CLASS . ID

    ID  shift, and go to state 22


State 13

   14 FunctionDef: STATIC . Type ID LP Formals RP StmtBlock

    TYPE   shift, and go to state 11
    CLASS  shift, and go to state 12

    Type  转到状态 23


State 14

   20 Field: VariableDef .

    $default  reduce using rule 20 (Field)


State 15

    3 VariableDef: Variable . SEMI
    4            | Variable . error SEMI

    error  shift, and go to state 24
    SEMI   shift, and go to state 25


State 16

    5 Variable: Type . ID ASSIGN Expr
    9 Type: Type . LB RB
   15 FunctionDef: Type . ID LP Formals RP StmtBlock

    ID  shift, and go to state 26
    LB  shift, and go to state 27


State 17

   21 Field: FunctionDef .

    $default  reduce using rule 21 (Field)


State 18

   23 Field2: Field . Field2

    ID      shift, and go to state 10
    TYPE    shift, and go to state 11
    CLASS   shift, and go to state 12
    STATIC  shift, and go to state 13

    $default  reduce using rule 22 (Field2)

    VariableDef  转到状态 14
    Variable     转到状态 15
    Type         转到状态 16
    FunctionDef  转到状态 17
    Field        转到状态 18
    Field2       转到状态 28


State 19

   18 ClassDef: CLASS ID LC Field2 . RC
   19         | CLASS ID LC Field2 . error RC

    error  shift, and go to state 29
    RC     shift, and go to state 30


State 20

   16 ClassDef: CLASS ID EXTENDS ID LC . Field2 RC
   17         | CLASS ID EXTENDS ID LC . Field2 error RC

    ID      shift, and go to state 10
    TYPE    shift, and go to state 11
    CLASS   shift, and go to state 12
    STATIC  shift, and go to state 13

    $default  reduce using rule 22 (Field2)

    VariableDef  转到状态 14
    Variable     转到状态 15
    Type         转到状态 16
    FunctionDef  转到状态 17
    Field        转到状态 18
    Field2       转到状态 31


State 21

    6 Variable: ID ASSIGN . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 48
    Constant  转到状态 49


State 22

    8 Type: CLASS ID .

    $default  reduce using rule 8 (Type)


State 23

    9 Type: Type . LB RB
   14 FunctionDef: STATIC Type . ID LP Formals RP StmtBlock

    ID  shift, and go to state 50
    LB  shift, and go to state 27


State 24

    4 VariableDef: Variable error . SEMI

    SEMI  shift, and go to state 51


State 25

    3 VariableDef: Variable SEMI .

    $default  reduce using rule 3 (VariableDef)


State 26

    5 Variable: Type ID . ASSIGN Expr
   15 FunctionDef: Type ID . LP Formals RP StmtBlock

    ASSIGN  shift, and go to state 52
    LP      shift, and go to state 53


State 27

    9 Type: Type LB . RB

    RB  shift, and go to state 54


State 28

   23 Field2: Field Field2 .

    $default  reduce using rule 23 (Field2)


State 29

   19 ClassDef: CLASS ID LC Field2 error . RC

    RC  shift, and go to state 55


State 30

   18 ClassDef: CLASS ID LC Field2 RC .

    $default  reduce using rule 18 (ClassDef)


State 31

   16 ClassDef: CLASS ID EXTENDS ID LC Field2 . RC
   17         | CLASS ID EXTENDS ID LC Field2 . error RC

    error  shift, and go to state 56
    RC     shift, and go to state 57


State 32

   44 LValue: ID .
   47 Call: ID . LP Actuals RP

    LP  shift, and go to state 58

    $default  reduce using rule 44 (LValue)


State 33

   86 Constant: BOOL .

    $default  reduce using rule 86 (Constant)


State 34

   84 Constant: INTEGER .

    $default  reduce using rule 84 (Constant)


State 35

   85 Constant: FLOAT .

    $default  reduce using rule 85 (Constant)


State 36

   87 Constant: STRING .

    $default  reduce using rule 87 (Constant)


State 37

   80 Expr: NEW . ID LP RP
   81     | NEW . Type LB Expr RB

    ID     shift, and go to state 59
    TYPE   shift, and go to state 11
    CLASS  shift, and go to state 12

    Type  转到状态 60


State 38

   88 Constant: Null .

    $default  reduce using rule 88 (Constant)


State 39

   64 Expr: THIS .

    $default  reduce using rule 64 (Expr)


State 40

   78 Expr: READINTEGER . LP RP

    LP  shift, and go to state 61


State 41

   79 Expr: READLINE . LP RP

    LP  shift, and go to state 62


State 42

   82 Expr: INSTANCEOF . LP Expr COMMA ID RP

    LP  shift, and go to state 63


State 43

   72 Expr: MINUS . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 64
    Constant  转到状态 49


State 44

   77 Expr: NOT . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 65
    Constant  转到状态 49


State 45

   66 Expr: LP . Expr RP
   83     | LP . CLASS ID RP Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    CLASS        shift, and go to state 66
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 67
    Constant  转到状态 49


State 46

   63 Expr: LValue .

    $default  reduce using rule 63 (Expr)


State 47

   65 Expr: Call .

    $default  reduce using rule 65 (Expr)


State 48

    6 Variable: ID ASSIGN Expr .
   45 LValue: Expr . DOT ID
   46       | Expr . LB Expr RB
   48 Call: Expr . DOT ID LP Actuals RP
   67 Expr: Expr . PLUS Expr
   68     | Expr . MINUS Expr
   69     | Expr . STAR Expr
   70     | Expr . DIV Expr
   71     | Expr . MOD Expr
   73     | Expr . RELOP Expr
   74     | Expr . ENEOP Expr
   75     | Expr . AND Expr
   76     | Expr . OR Expr

    PLUS   shift, and go to state 68
    MINUS  shift, and go to state 69
    STAR   shift, and go to state 70
    DIV    shift, and go to state 71
    MOD    shift, and go to state 72
    RELOP  shift, and go to state 73
    ENEOP  shift, and go to state 74
    AND    shift, and go to state 75
    OR     shift, and go to state 76
    DOT    shift, and go to state 77
    LB     shift, and go to state 78

    $default  reduce using rule 6 (Variable)


State 49

   62 Expr: Constant .

    $default  reduce using rule 62 (Expr)


State 50

   14 FunctionDef: STATIC Type ID . LP Formals RP StmtBlock

    LP  shift, and go to state 79


State 51

    4 VariableDef: Variable error SEMI .

    $default  reduce using rule 4 (VariableDef)


State 52

    5 Variable: Type ID ASSIGN . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 80
    Constant  转到状态 49


State 53

   15 FunctionDef: Type ID LP . Formals RP StmtBlock

    ID     shift, and go to state 10
    TYPE   shift, and go to state 11
    CLASS  shift, and go to state 12

    $default  reduce using rule 10 (Formals)

    Variable  转到状态 81
    Type      转到状态 82
    Formals   转到状态 83
    Formals2  转到状态 84


State 54

    9 Type: Type LB RB .

    $default  reduce using rule 9 (Type)


State 55

   19 ClassDef: CLASS ID LC Field2 error RC .

    $default  reduce using rule 19 (ClassDef)


State 56

   17 ClassDef: CLASS ID EXTENDS ID LC Field2 error . RC

    RC  shift, and go to state 85


State 57

   16 ClassDef: CLASS ID EXTENDS ID LC Field2 RC .

    $default  reduce using rule 16 (ClassDef)


State 58

   47 Call: ID LP . Actuals RP

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    $default  reduce using rule 49 (Actuals)

    LValue    转到状态 46
    Call      转到状态 47
    Actuals   转到状态 86
    Actuals2  转到状态 87
    Expr      转到状态 88
    Constant  转到状态 49


State 59

   80 Expr: NEW ID . LP RP

    LP  shift, and go to state 89


State 60

    9 Type: Type . LB RB
   81 Expr: NEW Type . LB Expr RB

    LB  shift, and go to state 90


State 61

   78 Expr: READINTEGER LP . RP

    RP  shift, and go to state 91


State 62

   79 Expr: READLINE LP . RP

    RP  shift, and go to state 92


State 63

   82 Expr: INSTANCEOF LP . Expr COMMA ID RP

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 93
    Constant  转到状态 49


State 64

   45 LValue: Expr . DOT ID
   46       | Expr . LB Expr RB
   48 Call: Expr . DOT ID LP Actuals RP
   67 Expr: Expr . PLUS Expr
   68     | Expr . MINUS Expr
   69     | Expr . STAR Expr
   70     | Expr . DIV Expr
   71     | Expr . MOD Expr
   72     | MINUS Expr .
   73     | Expr . RELOP Expr
   74     | Expr . ENEOP Expr
   75     | Expr . AND Expr
   76     | Expr . OR Expr

    STAR  shift, and go to state 70
    DIV   shift, and go to state 71
    MOD   shift, and go to state 72
    DOT   shift, and go to state 77
    LB    shift, and go to state 78

    $default  reduce using rule 72 (Expr)


State 65

   45 LValue: Expr . DOT ID
   46       | Expr . LB Expr RB
   48 Call: Expr . DOT ID LP Actuals RP
   67 Expr: Expr . PLUS Expr
   68     | Expr . MINUS Expr
   69     | Expr . STAR Expr
   70     | Expr . DIV Expr
   71     | Expr . MOD Expr
   73     | Expr . RELOP Expr
   74     | Expr . ENEOP Expr
   75     | Expr . AND Expr
   76     | Expr . OR Expr
   77     | NOT Expr .

    DOT  shift, and go to state 77
    LB   shift, and go to state 78

    $default  reduce using rule 77 (Expr)


State 66

   83 Expr: LP CLASS . ID RP Expr

    ID  shift, and go to state 94


State 67

   45 LValue: Expr . DOT ID
   46       | Expr . LB Expr RB
   48 Call: Expr . DOT ID LP Actuals RP
   66 Expr: LP Expr . RP
   67     | Expr . PLUS Expr
   68     | Expr . MINUS Expr
   69     | Expr . STAR Expr
   70     | Expr . DIV Expr
   71     | Expr . MOD Expr
   73     | Expr . RELOP Expr
   74     | Expr . ENEOP Expr
   75     | Expr . AND Expr
   76     | Expr . OR Expr

    PLUS   shift, and go to state 68
    MINUS  shift, and go to state 69
    STAR   shift, and go to state 70
    DIV    shift, and go to state 71
    MOD    shift, and go to state 72
    RELOP  shift, and go to state 73
    ENEOP  shift, and go to state 74
    AND    shift, and go to state 75
    OR     shift, and go to state 76
    DOT    shift, and go to state 77
    RP     shift, and go to state 95
    LB     shift, and go to state 78


State 68

   67 Expr: Expr PLUS . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 96
    Constant  转到状态 49


State 69

   68 Expr: Expr MINUS . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 97
    Constant  转到状态 49


State 70

   69 Expr: Expr STAR . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 98
    Constant  转到状态 49


State 71

   70 Expr: Expr DIV . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 99
    Constant  转到状态 49


State 72

   71 Expr: Expr MOD . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 100
    Constant  转到状态 49


State 73

   73 Expr: Expr RELOP . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 101
    Constant  转到状态 49


State 74

   74 Expr: Expr ENEOP . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 102
    Constant  转到状态 49


State 75

   75 Expr: Expr AND . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 103
    Constant  转到状态 49


State 76

   76 Expr: Expr OR . Expr

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 104
    Constant  转到状态 49


State 77

   45 LValue: Expr DOT . ID
   48 Call: Expr DOT . ID LP Actuals RP

    ID  shift, and go to state 105


State 78

   46 LValue: Expr LB . Expr RB

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45

    LValue    转到状态 46
    Call      转到状态 47
    Expr      转到状态 106
    Constant  转到状态 49


State 79

   14 FunctionDef: STATIC Type ID LP . Formals RP StmtBlock

    ID     shift, and go to state 10
    TYPE   shift, and go to state 11
    CLASS  shift, and go to state 12

    $default  reduce using rule 10 (Formals)

    Variable  转到状态 81
    Type      转到状态 82
    Formals   转到状态 107
    Formals2  转到状态 84


State 80

    5 Variable: Type ID ASSIGN Expr .
   45 LValue: Expr . DOT ID
   46       | Expr . LB Expr RB
   48 Call: Expr . DOT ID LP Actuals RP
   67 Expr: Expr . PLUS Expr
   68     | Expr . MINUS Expr
   69     | Expr . STAR Expr
   70     | Expr . DIV Expr
   71     | Expr . MOD Expr
   73     | Expr . RELOP Expr
   74     | Expr . ENEOP Expr
   75     | Expr . AND Expr
   76     | Expr . OR Expr

    PLUS   shift, and go to state 68
    MINUS  shift, and go to state 69
    STAR   shift, and go to state 70
    DIV    shift, and go to state 71
    MOD    shift, and go to state 72
    RELOP  shift, and go to state 73
    ENEOP  shift, and go to state 74
    AND    shift, and go to state 75
    OR     shift, and go to state 76
    DOT    shift, and go to state 77
    LB     shift, and go to state 78

    $default  reduce using rule 5 (Variable)


State 81

   12 Formals2: Variable . COMMA Formals
   13         | Variable .

    COMMA  shift, and go to state 108

    $default  reduce using rule 13 (Formals2)


State 82

    5 Variable: Type . ID ASSIGN Expr
    9 Type: Type . LB RB

    ID  shift, and go to state 109
    LB  shift, and go to state 27


State 83

   15 FunctionDef: Type ID LP Formals . RP StmtBlock

    RP  shift, and go to state 110


State 84

   11 Formals: Formals2 .

    $default  reduce using rule 11 (Formals)


State 85

   17 ClassDef: CLASS ID EXTENDS ID LC Field2 error RC .

    $default  reduce using rule 17 (ClassDef)


State 86

   47 Call: ID LP Actuals . RP

    RP  shift, and go to state 111


State 87

   50 Actuals: Actuals2 .

    $default  reduce using rule 50 (Actuals)


State 88

   45 LValue: Expr . DOT ID
   46       | Expr . LB Expr RB
   48 Call: Expr . DOT ID LP Actuals RP
   51 Actuals2: Expr . COMMA Actuals2
   52         | Expr .
   67 Expr: Expr . PLUS Expr
   68     | Expr . MINUS Expr
   69     | Expr . STAR Expr
   70     | Expr . DIV Expr
   71     | Expr . MOD Expr
   73     | Expr . RELOP Expr
   74     | Expr . ENEOP Expr
   75     | Expr . AND Expr
   76     | Expr . OR Expr

    PLUS   shift, and go to state 68
    MINUS  shift, and go to state 69
    STAR   shift, and go to state 70
    DIV    shift, and go to state 71
    MOD    shift, and go to state 72
    RELOP  shift, and go to state 73
    ENEOP  shift, and go to state 74
    AND    shift, and go to state 75
    OR     shift, and go to state 76
    COMMA  shift, and go to state 112
    DOT    shift, and go to state 77
    LB     shift, and go to state 78

    $default  reduce using rule 52 (Actuals2)


State 89

   80 Expr: NEW ID LP . RP

    RP  shift, and go to state 113


State 90

    9 Type: Type LB . RB
   81 Expr: NEW Type LB . Expr RB

    ID           shift, and go to state 32
    BOOL         shift, and go to state 33
    INTEGER      shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    NEW          shift, and go to state 37
    Null         shift, and go to state 38
    THIS         shift, and go to state 39
    READINTEGER  shift, and go to state 40
    READLINE     shift, and go to state 41
    INSTANCEOF   shift, and go to state 42
    MINUS        shift, and go to state 43
    NOT          shift, and go to state 44
    LP           shift, and go to state 45
    RB           shift, and go to state 54
